--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: lengua en línea
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Tranlations on Computational linguistics and related
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://4.bp.blogspot.com/-LiUj2vVuemY/WsZntzNCXuI/AAAAAAAAA2Q/4cZ-JZ5VfuUR5ZF8Hmop1NUM5-BvqBlvQCLcBGAs/s1600/18%2Bunicornio%2Bbloooggg%2B.jpg
 
 #
 # Flags below are optional
