--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,9 @@
 name: Lengua en línea
 
 # Short bio or description (displayed in the header)
-description: Translations on Computational linguistics, Programming and related
+description: Traducciones sobre Lingüística computacional, programación y temas relacionados.
+
+Translations on Computational linguistics, Programming and related
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://4.bp.blogspot.com/-LiUj2vVuemY/WsZntzNCXuI/AAAAAAAAA2Q/4cZ-JZ5VfuUR5ZF8Hmop1NUM5-BvqBlvQCLcBGAs/s1600/18%2Bunicornio%2Bbloooggg%2B.jpg
